# fwdsrover_xna_ros2

./: .gitignore  .gitmodules  README.md
fwdsrover_description/: CMakeLists.txt  package.xml
fwdsrover_description/launch/: display.launch.py
fwdsrover_description/meshes/: base_link.stl  joint.stl  sus.stl  wheel.stl
fwdsrover_description/params/: controllers.yaml
fwdsrover_description/rviz/: x40a.rviz
fwdsrover_description/urdf/: materials.xacro  x40a.gazebo  x40a.ros2_control.xacro  x40a.trans  x40a.xacro
fwdsrover_xna/: CHANGELOG.rst  CMakeLists.txt  package.xml
fwdsrover_xna_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
fwdsrover_xna_bringup/config/: rover_sim.params.yaml
fwdsrover_xna_bringup/launch/: nav_robot.launch.py  robot.launch.py  rover_gamepad.launch.py  rover_sim.launch.py  ydlidar_tg30_launch.py
fwdsrover_xna_bringup/params/: TG30.yaml
fwdsrover_xna_bringup/rviz/: laser.rviz  slam.rviz  x120a.rviz
fwdsrover_xna_bringup/src/: gazebo_odom_bridge.cpp  pub_odom.cpp  rover_gamepad.cpp  rover_sim_node.cpp
fwdsrover_xna_bringup/urdf/: fwdsroverX40A.xacro
fwdsrover_xna_gazebo/: CHANGELOG.rest  CMakeLists.txt  package.xml
fwdsrover_xna_gazebo/launch/: gazebo_bringup.launch.py  gazebo_nav.launch.py  gazebo_slam.launch.py  gazebo_slam_nav.launch.py  spawn_wall.launch.py
fwdsrover_xna_gazebo/maps/: test.yaml
fwdsrover_xna_navigation/: CHANGELOG.rest  CMakeLists.txt  package.xml
fwdsrover_xna_navigation/config/: mapper_params_online_async.yaml  mapper_params_online_sync.yaml  nav2_params.yaml  x120a_nav2_params.yaml  x40a_nav2_params.yaml
fwdsrover_xna_navigation/launch/: bringup_launch.py  gazebo_nav.launch.py  gazebo_slam.launch.py  gmapping.launch.py  localization_launch.py  navigation.launch.py  navigation_launch.py  online_async_launch.py  online_sync_launch.py  slam.launch.py  slam_sync.launch.py
fwdsrover_xna_navigation/launch/internal/: slam_async.launch.py
fwdsrover_xna_navigation/maps/: tes (コピー).pgm  tes (コピー).yaml  test22.pgm  test22.yaml
fwdsrover_xna_navigation/rviz/: nav2.rviz  slam.rviz
