<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fwdsrover_xna_bringup</name>
  <version>1.0.0</version>
  <description>Launch files and nodes to bring up 4WS rover simulation/control.</description>

  <maintainer email="infodesk@vstone.co.jp">Vstone</maintainer>
  <author email="matsuyama@vstone.co.jp">Matsuyama</author>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- 入力源（必要なら） -->
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>mouse_teleop</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

