<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fwdsrover_xna_navigation</name>
  <version>1.1.0</version>
  <description>slam_tools and nav2 samples for fwdsrover</description>
  <maintainer email="infodesk@vstone.co.jp">Vstone</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>ament_index_python</depend>
  <depend>rviz2</depend>
  <depend>slam_toolbox</depend>
  <depend>fwdsrover_description</depend>
  <depend>fwdsrover_xna_bringup</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
